Update page - hotline.html a2843e573be04d265c4c28fb93fa161987ac86c1

--- a/hotline/index.html
+++ b/hotline/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>COVID-19 Hotline</h1>
           
-            <p class="small-text">Last updated&nbsp;December 11, 2020 at 1:08 PM</p>
+            <p class="small-text">Last updated&nbsp;February 24, 2021 at 1:14 PM</p>
           
         </div>
       </div>
@@ -214,7 +214,7 @@
 
 <ol>
 <li>If you’re looking for general information about state COVID-19 resources: use <a href="https://covid19.ca.gov/">covid19.ca.gov</a> or call <a href="tel:833-422-4255">833-422-4255</a>.</li>
-<li>If you’re looking for California COVID Notify, Google and Apple&#8217;s exposure notification system: visit <a href="https://canotify.uchealth.edu/ucsdh/">California COVID Notify</a> or call <a href="tel:888-421-9457" data-wplink-url-error="true">888-421-9457</a>.</li>
+<li>If you’re looking for California COVID Notify, Google and Apple&#8217;s exposure notification system: visit <a href="https://canotify.uchealth.edu/ucsdh/">California COVID Notify</a> or call <a href="Tel:888-421-9457">888-421-9457</a>.</li>
 <li>If you’re looking for community services and support: Call <a href="tel:211">211</a>.</li>
 <li>If you’re looking for medicine and medical attention: Call your healthcare provider or pharmacy.</li>
 </ol>
