--- a/holidays/index.html
+++ b/holidays/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Holidays and COVID-19</h1>
           
-            <p class="small-text">Last updated&nbsp;February 22, 2021 at 4:57 PM</p>
+            <p class="small-text">Last updated&nbsp;February 24, 2021 at 2:57 PM</p>
           
         </div>
       </div>
@@ -217,7 +217,7 @@
 
 
 
-<p>For complete details and requirements, read CDPH’s <a title="Read the Travel Advisory" href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Travel-Advisory.aspx">Travel Advisory</a> and <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/COVID-19-Quarantine.aspx">COVID-19 Quarantine Guidance</a>.</p>
+<p>For complete details and requirements, read <a title="Read the Travel Advisory" href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Travel-Advisory.aspx">CDPH&#8217;s Travel Advisory</a> and <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/COVID-19-Quarantine.aspx">COVID-19 Quarantine Guidance</a>.</p>
 
 
 
