--- a/vi/index.html
+++ b/vi/index.html
@@ -377,7 +377,7 @@
           <article class="news-item trigger">
               <h3 class="h4 mb-0 pb-2 color-black">Interim guidance for places of worship published</h3>
               <p class="text-300">In response to recent judicial rulings, the state guidance for places of worship has been updated. This interim guidance is effective immediately.</p>
-              <p class="mt-2 mb-0"><a class="recent-news-link" href="https://covid19.ca.gov/industry-guidance/#worship">Read the guidance</a></p>
+              <p class="mt-2 mb-0"><a class="recent-news-link" href="https://covid19.ca.gov/industry-guidance/#worship">Read the interim guidance</a></p>
           </article>
         
       </div>
