Update translation - 103346116 (#3435) 254837b0381476ffd35b136ad68c3ea782afddaf

--- a/ar/safer-economy/index.html
+++ b/ar/safer-economy/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>برامج تخطيطية لاقتصاد أكثر أمانا</h1>
           
-            <p class="small-text">آخر التحديثات&nbsp;3:05 م الساعة 24 فبراير 2021</p>
+            <p class="small-text">آخر التحديثات&nbsp;3:12 م الساعة 24 فبراير 2021</p>
           
         </div>
       </div>
@@ -309,8 +309,8 @@
                 </button>
                 <div class="card-container" aria-hidden="true">
                   <div class="card-body">
-            <p>يمكن إعادة فتح المدارس من الحضانة وحتى الصف الثاني عشر للتعليم بالحضور الشخصي بمجرد أن تصبح مقاطعتهم ضمن الفئة الكبيرة (الأحمر) لمدة 5 أيام متتالية على الأقل ويقوموا بنشر خطة أمان كوفيد-19 الخاصة بهم (CSP) على الصفحة الرئيسية لموقعهم على الويب. اليوم الأول الذي يتم فيه اعتبار المقاطعة في الفئة الكبيرة (الأحمر) هو يوم الأربعاء بعد الإعلان عن التعيينات الأسبوعية لفئة المقاطعة ونشرها على موقع إدارة الصحة العامة بولاية كاليفورنيا على الويب (أيام الثلاثاء). على سبيل المثال، إذا تم تعيين إحدى المقاطعات إلى الفئة الكبيرة (الأحمر) يوم الثلاثاء، 9 مارس، فإن أول يوم كامل تكون فيه المقاطعة في الفئة الكبيرة (الأحمر) هو الأربعاء، 10 مارس. ليس مطلوبًا من المدارس التي أُعيد فتحها للتعليم بالحضور الشخصي للطلاب الإغلاقُ إذا انتقلت المقاطعة الخاصة بها مرة أخرى إلى الفئة الواسعة الانتشار (البنفسجي). </p>
-<p>تعرف على المزيد حول <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/CDPH%20Document%20Library/COVID-19/Consolidated_Schools_Guidance.pdf">التوجيهات الخاصة بالمدارس</a>.</p>
+            <p>يمكن إعادة فتح المدارس الصفية من رياض الأطفال حتى الصف الثاني عشر للتعليم بالحضور الشخصي للطلاب وفقًا <a href="https://schools.covid19.ca.gov/">للإرشادات المدرسية من رياض الأطفال وحتى الصف الثاني عشر</a>. قد تفتح المدارس من رياض الأطفال وحتى الصف السادس بمجرد أن يكون معدل الحالات في مقاطعتهم أقل من 25 حالة لكل 100,00 (معدلة) وفي حال كانت المدارس قد اتبعت العمليات الأخرى لإعادة فتح المدارس المبينة في الإرشادات. وبوسع المدارس المتوسطة والثانوية أن تفتح أبوابها بمجرد وصول المقاطعة إلى الفئة الكبيرة (أحمر) واتباع إرشادات إعادة فتح المدارس أيضًا. إن اليوم الأول الذي تؤهل فيه المدارس لإعادة افتتاحها بموجب أي من المعيارين هو اليوم التالي لبلوغ المقاطعة واستيفائها المعايير المنصوص عليها (معدل الحالات أقل من 25، أو كونها في الفئة الكبيرة (أحمر) في مخطط الاقتصاد الأكثر أمانًا (الذي ينشر أسبوعيًا كل يوم ثلاثاء وعلى هذا فإن المدارس مؤهلة لإعادة فتح أبوابها يوم الأربعاء). إن المدارس في المقاطعات التي استوفت المعايير المنصوص عليها لإعادة فتح المدرسة وفقًا لإرشادات K-12 أمامها فترة ثلاثة أسابيع لفتحها، حتى وإن توقفت المقاطعة عن استيفاء المعيار خلال تلك الفترة (أي أن معدل الحالة ≥ 25 في عملية حسابية لاحقة أو أن يعود تخصيص المقاطعة إلى الفئة الواسعة الانتشار (البنفسجي) أثناء تلك الفترة. والهدف من فترة الثلاثة أسابيع هو تيسير إعادة فتح المدارس بشكل هادئ وآمن.</p>
+<p>تعرف على المزيد حول <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/CDPH%20Document%20Library/COVID-19/Consolidated_Schools_Guidance.pdf">التوجيهات الخاصة بالمدارس<span class="pdf-link-icon no-underline-icon" aria-hidden="true">PDF</span></a>.</p>
 
                   </div>
                 </div>
