--- a/es/safer-economy/index.html
+++ b/es/safer-economy/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Plan para una economía más segura</h1>
           
-            <p class="small-text">Última actualización&nbsp;24 de febrero de 2021 a las 3:05 p. m.</p>
+            <p class="small-text">Última actualización&nbsp;24 de febrero de 2021 a las 3:12 p. m.</p>
           
         </div>
       </div>
@@ -309,8 +309,8 @@
                 </button>
                 <div class="card-container" aria-hidden="true">
                   <div class="card-body">
-            <p>Las escuelas de grados K-12 pueden reabrir para enseñanza en persona una vez que su condado haya estado en el nivel Sustancial (rojo) durante al menos 5 días consecutivos y haya publicado su plan de seguridad contra el COVID-19 (COVID-19 Safety Plan, CSP) en la página de inicio de su sitio web. El primer día en el que el condado se considera que está en el nivel Sustancial (rojo) es el miércoles después de que se anuncian y publican las asignaciones semanales del nivel del condado en el sitio web del CDPH (los martes). Por ejemplo, si un condado es asignado al nivel Sustancial (rojo) el martes 9 de marzo, el primer día completo en el que el condado está en el nivel Sustancial (rojo) es el miércoles 10 de marzo.Las escuelas que han reabierto para instrucción en persona no están obligadas a cerrar si su condado vuelve al nivel Extendido (morado). </p>
-<p>Obtenga más información sobre la <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/CDPH%20Document%20Library/COVID-19/Consolidated_Schools_Guidance.pdf">guía para escuelas</a>.</p>
+            <p>Las escuelas de jardín de niños a doceavo grado (K-12) pueden reabrir para enseñanza en persona de acuerdo con la <a href="https://schools.covid19.ca.gov/">guía para escuelas K-12</a>. Las escuelas de jardín de niños a sexto grado (K-6) pueden abrir una vez que su condado tenga una tasa de casos de menos de 25 casos por cada 100,00 habitantes (ajustada) y si las escuelas han seguido los otros procesos para la reapertura de escuelas descritos en la guía. Las escuelas secundarias y preparatorias pueden abrir una vez que el condado se encuentre en el nivel Sustancial (rojo) y también haya seguido la guía de reapertura de escuelas. El primer día que las escuelas son elegibles para reabrir de acuerdo con alguno de los criterios es el día después de que el condado cumpla la métrica correspondiente (tasa de casos de menos de 25 o estar en el nivel Sustancial [rojo]) del Plan para una economía más segura (publicado semanalmente los martes, por lo que las escuelas son elegibles para reabrir los miércoles). Las escuelas de los condados que han cumplido los criterios correspondientes para la reapertura de las escuelas según la guía para escuelas K-12 tienen un período de tres semanas para abrir, a partir del día en que el condado cumpla el criterio de reapertura, incluso si el condado deja de cumplir el criterio durante esa ventana (es decir, la tasa de casos es ≥ 25 en un cálculo posterior o la asignación del condado vuelve al nivel Extendido [púrpura] durante la ventana). El objetivo de la ventana de tres semanas es facilitar la reapertura escolar de forma tranquila y segura.</p>
+<p>Obtenga más información sobre la <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/CDPH%20Document%20Library/COVID-19/Consolidated_Schools_Guidance.pdf">guía para escuelas<span class="pdf-link-icon no-underline-icon" aria-hidden="true">PDF</span></a>.</p>
 
                   </div>
                 </div>
