--- a/vi/safer-economy/index.html
+++ b/vi/safer-economy/index.html
@@ -150,7 +150,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Kế Hoạch Chi Tiết Vì Một Nền Kinh Tế An Toàn Hơn</h1>
           
-            <p class="small-text">Cập nhật mới nhất&nbsp;24 tháng 2, 2021 lúc 15:05</p>
+            <p class="small-text">Cập nhật mới nhất&nbsp;24 tháng 2, 2021 lúc 15:12</p>
           
         </div>
       </div>
@@ -311,8 +311,8 @@
                 </button>
                 <div class="card-container" aria-hidden="true">
                   <div class="card-body">
-            <p>Các trường khối Mầm Non - Lớp 12 có thể mở cửa trở lại đối với hình thức giảng dạy trên lớp sau khi quận đã ở cấp Quan Trọng (màu đỏ) trong ít nhất 5 ngày liên tiếp và đã đăng tải Kế Hoạch An Toàn Trong COVID-19 (CSP) lên trang chủ trang web của họ. Ngày đầu tiên một quận được xem xét ở cấp Quan Trọng (màu đỏ) là Thứ Tư sau khi các chỉ định cấp quận hàng tuần được công bố và đăng tải trên trang web của CDPH (vào Thứ Ba). Ví dụ: nếu một quận được chỉ định cấp Quan Trọng (màu đỏ) vào Thứ Ba, ngày 9 tháng 3, thì toàn bộ ngày đầu tiên mà quận đó ở cấp Quan Trọng (màu đỏ) là Thứ Tư, ngày 10 tháng 3. Các trường học đã mở cửa trở lại đối với hình thức giảng dạy trên lớp không cần đóng cửa nếu quận của họ quay lại cấp Lan Rộng (màu tím). </p>
-<p>Tìm hiểu thêm về <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/CDPH%20Document%20Library/COVID-19/Consolidated_Schools_Guidance.pdf">hướng dẫn dành cho các trường học</a>.</p>
+            <p>Các trường học từ mẫu giáo đến lớp 12 có thể mở cửa trở lại để giảng dạy trên lớp theo <a href="https://schools.covid19.ca.gov/">Hướng Dẫn cho Các Trường Học từ Mẫu Giáo đến Lớp 12</a>. Các trường học từ mẫu giáo đến lớp 6 có thể mở cửa khi quận của họ có tỷ lệ ca mắc dưới 25 ca trên mỗi 100,00 người (đã điều chỉnh) và nếu các trường học tuân thủ các quy trình khác để mở cửa trở lại trường học được nêu trong hướng dẫn đó. Các Trường Trung Học Cơ Sở và Phổ Thông có thể mở cửa khi quận của họ thuộc cấp Nghiêm Trọng (màu đỏ) và cũng đã tuân thủ hướng dẫn mở cửa trở lại trường học. Ngày đầu tiên các trường học đủ điều kiện để mở cửa trở lại theo bất kỳ một trong hai tiêu chí là ngày sau khi quận đáp ứng số liệu phù hợp (tỷ lệ ca mắc dưới 25 hoặc thuộc cấp Nghiêm Trọng (màu đỏ)) của Kế Hoạch Chi Tiết Vì Một Nền Kinh Tế An Toàn Hơn (được công bố hàng tuần vào Thứ Ba, do đó các trường học sẽ đủ điều kiện mở cửa trở lại vào Thứ Tư). Trường học tại các quận đã đáp ứng các tiêu chí phù hợp để mở cửa trở lại trường học theo Hướng Dẫn cho Mẫu Giáo đến Lớp 12 có khoảng thời gian ba tuần để mở cửa, bắt đầu từ ngày quận đáp ứng các tiêu chí để mở cửa trở lại, ngay cả khi quận không còn đáp ứng các tiêu chí trong suốt khoảng thời gian đó (có nghĩa là tỷ lệ ca mắc ≥25 ca trong lần tính sau đó hoặc chỉ định quận trở lại cấp Lan Rộng [màu tím] trong suốt khoảng thời gian đó). Mục đích của khoảng thời gian ba tuần này là để tạo điều kiện thuận lợi cho việc mở cửa trở lại trường học một cách bình tĩnh và an toàn.</p>
+<p>Tìm hiểu thêm về <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/CDPH%20Document%20Library/COVID-19/Consolidated_Schools_Guidance.pdf">hướng dẫn dành cho các trường học<span class="pdf-link-icon no-underline-icon" aria-hidden="true">PDF</span></a>.</p>
 
                   </div>
                 </div>
@@ -334,7 +334,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4>Tôi có thể làm gì để giúp quận của mình nằm ở cấp thấp hơn?</h4>
+            <h4>Tôi có thể làm gì để giúp quận của mình hạ xuống cấp thấp hơn?</h4>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true">
