--- a/zh-hans/safer-economy/index.html
+++ b/zh-hans/safer-economy/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>更安全的经济蓝图</h1>
           
-            <p class="small-text">最后更新时间&nbsp;2021年2月24日, 下午3:05</p>
+            <p class="small-text">最后更新时间&nbsp;2021年2月24日, 下午3:12</p>
           
         </div>
       </div>
@@ -309,8 +309,8 @@
                 </button>
                 <div class="card-container" aria-hidden="true">
                   <div class="card-body">
-            <p>若K-12学校所在的县至少已连续5天处于重度（红色）等级，并且学校已在其网站主页发布COVID-19安全计划 (COVID-19 Safety Plan, CSP)，则其可以重新开放面授教学。某县被视为处于重度（红色）等级的第一天，即每周公布各县等级划分情况并发布至CDPH网站之日（每周二）后的星期三。例如，若某县于3月9日星期二被划分至重度（红色）等级，则该县处于重度（红色）等级的第一个整天，为3月10日星期三。已经重新开放面授教学的学校不必关闭，即使其所在的县重回广泛传播（紫色）等级。 </p>
-<p>详细了解<a href="https://www.cdph.ca.gov/Programs/CID/DCDC/CDPH%20Document%20Library/COVID-19/Consolidated_Schools_Guidance.pdf">学校指引</a>。</p>
+            <p>K-12学校可以按照<a href="https://schools.covid19.ca.gov/">K-12学校指引</a>恢复面授课程。K-6学校如果遵循了指引中列出的其他有关重新开放学校的规定，并且所在县确诊率低于每100,00（调整后的数目）人25例，则可以开放。初高中学校如果遵循了重新开放学校指引的规定，并且所在县降级到重度（红色）等级，则可以开放。符合任一标准的学校有资格在其所在县达到更安全的经济蓝图中的相关标准（即该县确诊率低于每100,00人25例或该县处于重度（红色）等级）后的第二天重新开放（每周二发公布达到标准的郡县，因此符合资格的学校可在周三重新开放）。所在县符合相关标准的学校可根据K-12指引的规定重新开放，且重新开放前有三周准备时间，时间从其所在县符合重新开放标准的那天开始计算，即使该县在这段时间内未达到标准（即这段时间内，该县的确诊率经计算再次 ≥25或该县再次升级到广泛传播【紫色】等级），亦可重新开放。设定三周准备时间旨在促进学校稳妥且安全地重新开放。</p>
+<p>查看</span></a>PDF版<a href="https://www.cdph.ca.gov/Programs/CID/DCDC/CDPH%20Document%20Library/COVID-19/Consolidated_Schools_Guidance.pdf">学校指引<span class="pdf-link-icon no-underline-icon" aria-hidden="true">了解更多详情。</p>
 
                   </div>
                 </div>
