--- a/zh-hant/safer-economy/index.html
+++ b/zh-hant/safer-economy/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>更安全的經濟藍圖</h1>
           
-            <p class="small-text">最近更新&nbsp;2021年2月24日, 下午3:05</p>
+            <p class="small-text">最近更新&nbsp;2021年2月24日, 下午3:12</p>
           
         </div>
       </div>
@@ -309,8 +309,8 @@
                 </button>
                 <div class="card-container" aria-hidden="true">
                   <div class="card-body">
-            <p>若K-12學校所在的縣至少已連續5天處於重度（紅色）等級，並且學校已在其網站主頁發佈COVID-19安全計劃 (COVID-19 Safety Plan, CSP)，則其可以重新開放面授教學。某縣被視為處於重度（紅色）等級的第一天，即每週公佈各縣等級劃分情況並發佈至CDPH網站之日（每週二）後的星期三。例如，若某縣於3月9日星期二被劃分至重度（紅色）等級，則該縣處於重度（紅色）等級的第一個整天，為3月10日星期三。已經重新開放面授教學的學校不必關閉，即使其所在的縣重回廣泛傳播（紫色）等級。 </p>
-<p>詳細了解<a href="https://www.cdph.ca.gov/Programs/CID/DCDC/CDPH%20Document%20Library/COVID-19/Consolidated_Schools_Guidance.pdf">學校指引</a>。</p>
+            <p>K-12學校可以按照<a href="https://schools.covid19.ca.gov/">K-12學校指引</a>恢復面授課程。K-6學校如果遵循了指引中列出的其他有關重新開放學校的規定，並且所在縣確診率低於每100,00（調整后的數目）人25例，則可以開放。初高中學校如果遵循了重新開放學校指引的規定，並且所在縣降級到重度（紅色）等級，則可以開放。符合任一標準的學校有資格在其所在縣達到更安全的經濟藍圖中的相關標準（即該縣確診率低於每100,00人25例或該縣處於重度（紅色）等級）后的第二天重新開放（每週二發公佈達到標準的郡縣，因此符合資格的學校可在週三重新開放）。所在縣符合相關標準的學校可根據K-12指引的規定重新開放，且重新開放前有三周準備時間，時間從其所在縣符合重新開放標準的那天開始計算，即使該縣在這段時間內未達到標準（即這段時間內，該縣的確診率經計算再次≥25或該縣再次升級到廣泛傳播（紫色）等級），亦可重新開放。設定三周準備時間旨在促進學校穩妥且安全地重新開放。</p>
+<p>詳細了解</span></a>PDF版<a href="https://www.cdph.ca.gov/Programs/CID/DCDC/CDPH%20Document%20Library/COVID-19/Consolidated_Schools_Guidance.pdf">學校指引<span class="pdf-link-icon no-underline-icon" aria-hidden="true">。</p>
 
                   </div>
                 </div>
