--- a/pages/wordpress-posts/new.html
+++ b/pages/wordpress-posts/new.html
@@ -7,4 +7,4 @@
 
 
 
-<p><a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/outdoor-indoor-recreational-sports.aspx" class="action-link pt-3 pb-3 px-4">Read the guidance</a></p>
+<a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/outdoor-indoor-recreational-sports.aspx" class="action-link pt-3 pb-3 px-4">Read the guidance</a>
