--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
 
 
 
-<p><a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/outdoor-indoor-recreational-sports.aspx" class="action-link pt-3 pb-3 px-4">Read the guidance</a></p>
+<a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/outdoor-indoor-recreational-sports.aspx" class="action-link pt-3 pb-3 px-4">Read the guidance</a>
 
 						</div>
 					</div>
