Update page - reopening-roadmap-activity-data.json 78746314b2ecb6a4f15990d4c2d79d40d5562ca8

--- a/industry-guidance/index.html
+++ b/industry-guidance/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Industry guidance to reduce risk</h1>
           
-            <p class="small-text">Last updated&nbsp;February 23, 2021 at 1:31 PM</p>
+            <p class="small-text">Last updated&nbsp;February 24, 2021 at 4:07 PM</p>
           
         </div>
       </div>
@@ -1902,7 +1902,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4 id="retail"><span class="ca-gov-icon-payment-card"></span> Retail&nbsp;&#8211; updated October 20, 2020</h4>
+            <h4 id="retail"><span class="ca-gov-icon-payment-card"></span> Retail&nbsp;&#8211; updated February 24, 2021</h4>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true">
@@ -1911,7 +1911,7 @@
 <p>Widespread (purple)</p>
 <ul><li>Open with modifications</li><li>Retail capacity must be limited to 25%</li><li>Grocery store capacity must be limited to 50%</li></ul>
 <p>Substantial (red)</p>
-<ul><li>Open with modifications</li><li>Retail capacity must be limited to 50%</li></ul>
+<ul><li>Open with modifications</li><li>Retail capacity must be limited to 50%</li><li>Grocery stores can operate at full capacity</li></ul>
 <p>Moderate (orange): Indoor with modifications</p>
 <p>Minimal (yellow): Indoor with modifications</p>
 <p>Follow this <a href="https://files.covid19.ca.gov/pdf/guidance-retail--en.pdf">guidance for retailers</a> to support a safe, clean environment for workers and customers. Review the guidance, prepare a plan, and post the <a href="https://files.covid19.ca.gov/pdf/checklist-retail--en.pdf">checklist for retail</a> in your workplace to show customers and employees that you’ve reduced the risk and are open for business.</p>
