Update page - treatment-for-covid-19.html 0f48abcabee9dd37c1ddf74a24efcd53dc7a91ac

--- a/treatment-for-covid-19/index.html
+++ b/treatment-for-covid-19/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Treatment</h1>
           
-            <p class="small-text">Last updated&nbsp;February 18, 2021 at 5:05 PM</p>
+            <p class="small-text">Last updated&nbsp;February 24, 2021 at 6:03 PM</p>
           
         </div>
       </div>
@@ -201,7 +201,11 @@
 
 
 
-<p><a href="https://www.covid19treatmentguidelines.nih.gov/therapeutic-management/">NIH COVID-19 Treatment Guidelines</a> say there is not enough evidence to recommend for or against these treatments. They should not be considered standard of care.These treatments are available at designated <a href="https://protect-public.hhs.gov/pages/therapeutics-distribution/">distribution locations</a>. They are also available at many long-term care facilities in California.</p>
+<p>NIH COVID-19 Treatment Guidelines <a href="https://www.covid19treatmentguidelines.nih.gov/statement-on-bamlanivimab-plus-etesevimab-eua/">recommend the use of bamlanivimab, bamlanivimab and etesevimab administered together</a> for the treatment of outpatients with mild to moderate COVID-19 who are at high risk of clinical progression. <a href="https://www.covid19treatmentguidelines.nih.gov/therapeutic-management/">It also says</a> there is not enough evidence to recommend for or against other two monoclonal antibody treatments.</p>
+
+
+
+<p>These treatments are available at designated <a href="https://protect-public.hhs.gov/pages/therapeutics-distribution/">distribution locations</a>. They are also available at many long-term care facilities in California.</p>
 
 
 
@@ -399,7 +403,7 @@
 <p>Patients treated with these drugs should continue to:</p>
 <ul><li>Self-isolate</li><li>Wear a mask&nbsp;</li><li>Socially distance&nbsp;</li><li>Avoid sharing personal items&nbsp;</li><li>Clean and disinfect “high touch” surfaces&nbsp;</li><li>Frequently wash their hands</li></ul>
 <p>Find out more about these treatments from the FDA:</p>
-<ul><li><a href="https://www.fda.gov/news-events/press-announcements/coronavirus-covid-19-update-fda-authorizes-monoclonal-antibody-treatment-covid-19">Monoclonal Antibody Bamlanivimab for Treatment of COVID-19</a></li><li><a href="https://www.fda.gov/news-events/press-announcements/coronavirus-covid-19-update-fda-authorizes-monoclonal-antibodies-treatment-covid-19-0">Monoclonal Antibody Bamlanivimab and Etesevimab for Treatment of COVID-19</a></li><li><a href="https://www.fda.gov/news-events/press-announcements/coronavirus-covid-19-update-fda-authorizes-monoclonal-antibodies-treatment-covid-19">Monoclonal Antibodies Casirivimab and Imdevimab for Treatment of COVID-19</a></li><li><a href="https://www.fda.gov/media/143605/download">Frequently Asked Questions on the Emergency Use Authorization for Bamlanivimab</a> </li><li><a href="https://www.fda.gov/media/145808/download">Frequently Asked Questions on the Emergency Use Authorization for Bamlanivimab and Etesevimab</a></li><li><a href="https://www.fda.gov/media/143894/download">Frequently Asked Questions on the Emergency Use Authorization of Casirivimab + Imdevimab</a></li></ul>
+<ul><li><a href="https://www.fda.gov/news-events/press-announcements/coronavirus-covid-19-update-fda-authorizes-monoclonal-antibody-treatment-covid-19">Monoclonal Antibody Bamlanivimab for Treatment of COVID-19</a></li><li><a href="https://www.fda.gov/news-events/press-announcements/coronavirus-covid-19-update-fda-authorizes-monoclonal-antibodies-treatment-covid-19-0">Monoclonal Antibody Bamlanivimab and Etesevimab for Treatment of COVID-19</a></li><li><a href="https://www.fda.gov/news-events/press-announcements/coronavirus-covid-19-update-fda-authorizes-monoclonal-antibodies-treatment-covid-19">Monoclonal Antibodies Casirivimab and Imdevimab for Treatment of COVID-19</a></li><li><a href="https://www.fda.gov/media/143605/download">Frequently Asked Questions on the Emergency Use Authorization for Bamlanivimab</a>&nbsp;</li><li><a href="https://www.fda.gov/media/145808/download">Frequently Asked Questions on the Emergency Use Authorization for Bamlanivimab and Etesevimab</a></li><li><a href="https://www.fda.gov/media/143894/download">Frequently Asked Questions on the Emergency Use Authorization of Casirivimab + Imdevimab</a></li></ul>
 
                   </div>
                 </div>
