--- a/vaccines/index.html
+++ b/vaccines/index.html
@@ -150,7 +150,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Vaccines</h1>
           
-            <p class="small-text">Last updated&nbsp;February 24, 2021 at 6:16 PM</p>
+            <p class="small-text">Last updated&nbsp;February 25, 2021 at 5:43 AM</p>
           
         </div>
       </div>
@@ -950,7 +950,7 @@
               <div class="card">
                 <button class="card-header accordion-alpha" type="button" aria-expanded="false">
                   <div class="accordion-title">
-            <h4>Can pregnant or breastfeeding women be vaccinated against COVID-19? </h4>
+            <h4>Can pregnant or breastfeeding women be vaccinated against COVID-19?&nbsp;</h4>
                   </div><div class="plus-munus"><cagov-plus></cagov-plus><cagov-minus></cagov-minus></div>
                 </button>
                 <div class="card-container" aria-hidden="true">
@@ -1149,7 +1149,7 @@
 
 
 
-<ul><li>CDPH: <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Covid19Vaccines.aspx"><a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Covid19Vaccines.aspx">COVID-19 (Coronavirus Disease 2019) Vaccines</a></a></li><li>CDPH: <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/Immunization/COVIDVaccineEnrollment.aspx#">Enrollment Resources</a></li><li>CDPH: <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/COVID-19Vaccine.aspx">COVID-19 vaccine planning</a></li><li>CDPH: <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/Immunization/COVID-19Vaccine.aspx">California COVID-19 Vaccination Program</a></li><li>CDC: <a title="CDC.gov COVID-19 Vaccines" href="https://www.cdc.gov/coronavirus/2019-ncov/vaccines/index.html">COVID-19 Vaccines</a></li><li>CDC: <a href="https://www.cdc.gov/coronavirus/2019-ncov/vaccines/keythingstoknow.html">Key Things to Know About COVID-19 Vaccines</a></li><li>CDC: <a href="https://www.cdc.gov/vaccines/covid-19/index.html">COVID-19 Vaccination</a></li><li>CDC: <a href="https://www.cdc.gov/vaccines/covid-19/info-by-product/clinical-considerations.html">Clinical Considerations for Use of mRNA COVID-19 Vaccines</a></li><li>CDC: <a href="https://www.cdc.gov/coronavirus/2019-ncov/vaccines/different-vaccines/Pfizer-BioNTech.html">Information about the Pfizer-BioNTech COVID-19 Vaccine</a></li><li>CDC: <a href="https://www.cdc.gov/coronavirus/2019-ncov/vaccines/different-vaccines/Moderna.html">Information about the Moderna COVID-19 Vaccine</a></li></ul>
+<ul><li>CDPH: <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Covid19Vaccines.aspx"></a><a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Covid19Vaccines.aspx">COVID-19 (Coronavirus Disease 2019) Vaccines</a></li><li>CDPH: <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/Immunization/COVID-19Vaccine.aspx">California COVID-19 Vaccination Program</a></li><li>CDC: <a title="CDC.gov COVID-19 Vaccines" href="https://www.cdc.gov/coronavirus/2019-ncov/vaccines/index.html">COVID-19 Vaccines</a></li><li>CDC: <a href="https://www.cdc.gov/coronavirus/2019-ncov/vaccines/keythingstoknow.html">Key Things to Know About COVID-19 Vaccines</a></li><li>CDC: <a href="https://www.cdc.gov/vaccines/covid-19/index.html">COVID-19 Vaccination</a></li></ul>
 </div>
     </div>
   </div>
