--- a/vaccines/index.html
+++ b/vaccines/index.html
@@ -150,7 +150,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Vaccines</h1>
           
-            <p class="small-text">Last updated&nbsp;February 25, 2021 at 5:43 AM</p>
+            <p class="small-text">Last updated&nbsp;February 25, 2021 at 5:53 AM</p>
           
         </div>
       </div>
@@ -955,7 +955,7 @@
                 </button>
                 <div class="card-container" aria-hidden="true">
                   <div class="card-body">
-            <p>Yes. <a href="https://www.cdc.gov/coronavirus/2019-ncov/vaccines/recommendations/pregnancy.html">CDC recommends</a> that if you are pregnant, you may choose to be vaccinated when it’s available to you. There is currently no evidence that antibodies formed from COVID-19 vaccination cause any problem with pregnancy, including the development of the placenta.</p>
+            <p>Yes. The <a href="https://www.cdc.gov/coronavirus/2019-ncov/vaccines/recommendations/pregnancy.html">CDC recommends</a> that if you are pregnant, you may choose to be vaccinated when it’s available to you. There is currently no evidence that antibodies formed from COVID-19 vaccination cause any problem with pregnancy, including the development of the placenta.</p>
 <p>People who are trying to become pregnant now or who plan to try in the future may also receive the COVID-19 vaccine when it becomes available to them. There is no evidence that fertility problems are a side effect of any vaccine, including COVID-19 vaccines. There is no routine recommendation for taking a pregnancy test before you get a COVID-19 vaccine.If you have questions about getting vaccinated, talk with a healthcare provider to help you make an informed decision.</p>
 
                   </div>
@@ -1150,6 +1150,10 @@
 
 
 <ul><li>CDPH: <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Covid19Vaccines.aspx"></a><a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Covid19Vaccines.aspx">COVID-19 (Coronavirus Disease 2019) Vaccines</a></li><li>CDPH: <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/Immunization/COVID-19Vaccine.aspx">California COVID-19 Vaccination Program</a></li><li>CDC: <a title="CDC.gov COVID-19 Vaccines" href="https://www.cdc.gov/coronavirus/2019-ncov/vaccines/index.html">COVID-19 Vaccines</a></li><li>CDC: <a href="https://www.cdc.gov/coronavirus/2019-ncov/vaccines/keythingstoknow.html">Key Things to Know About COVID-19 Vaccines</a></li><li>CDC: <a href="https://www.cdc.gov/vaccines/covid-19/index.html">COVID-19 Vaccination</a></li></ul>
+
+
+
+<p></p>
 </div>
     </div>
   </div>
