Update translation - 103433444 (#3446) 8653666d864ca839235fe59dd9b0f86ee31b15cb

--- a/ar/guide-immigrant-californians/index.html
+++ b/ar/guide-immigrant-californians/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>مساعدة المهاجرين</h1>
           
-            <p class="small-text">آخر التحديثات&nbsp;11:01 ص الساعة 26 يناير 2021</p>
+            <p class="small-text">آخر التحديثات&nbsp;11:23 ص الساعة 24 فبراير 2021</p>
           
         </div>
       </div>
@@ -189,7 +189,7 @@
 
 
 
-<p>إن "Medi-Nurse"، هو<a href="https://www.dhcs.ca.gov/Pages/DHCS-COVID%E2%80%9119-Medi-Nurse-Line.aspx">أحد الخطوط المجانية لطلب المشورة من أخصائيي التمريض</a> وهو متاح على مدار 24 ساعة طوال أيام الأسبوع على رقم<a href="about:blank"> 1-877-409-9052</a>. يمكنك:</p>
+<p>إن "Medi-Nurse"، هو<a href="https://www.dhcs.ca.gov/Pages/DHCS-COVID%E2%80%9119-Medi-Nurse-Line.aspx">أحد الخطوط المجانية لطلب المشورة من أخصائيي التمريض</a> وهو متاح على مدار 24 ساعة طوال أيام الأسبوع على رقم<a href="about:blank"> ‎1-877-409-9052</a>. يمكنك:</p>
 
 
 
@@ -205,7 +205,7 @@
 
 
 
-<ul><li><a href="https://www.nilc.org/issues/immigration-enforcement/everyone-has-certain-basic-rights/">اعرف حقوقك الأساسية</a></li><li><a href="https://www.ilrc.org/step-step-family-preparedness-plan">ضع خطة للتأهب العائلي</a></li><li>اعرف حقوقك في العمل (متوفر باللغتين <a href="https://legalaidatwork.org/factsheet/workplace-raids-workers-rights/">الإنجليزية</a> و <a href="https://legalaidatwork.org/factsheet/workplace-raids-workers-rights/?lang=es">الإسبانية</a>)</li><li><a href="https://ccijustice.org/services/california-rapid-response-networks/">أرقام الاستجابة السريعة للإبلاغ عن نشاط ICE</a></li><li><a href="http://www.cdss.ca.gov/Benefits-Services/More-Services/Immigration-Services/Immigration-Services-Contractors">المساعدة القانونية لقضايا الهجرة الفردية</a></li></ul>
+<ul><li><a href="https://www.nilc.org/issues/immigration-enforcement/everyone-has-certain-basic-rights/">اعرف حقوقك الأساسية</a></li><li><a href="https://www.ilrc.org/step-step-family-preparedness-plan">ضع خطة للتأهب العائلي</a></li><li>اعرف حقوقك في العمل (متوفر في شكل <a href="https://legalaidatwork.org/factsheet/workplace-raids-workers-rights/">نشرة باللغة الإنجليزية</a> و <a href="https://legalaidatwork.org/factsheet/workplace-raids-workers-rights/?lang=es">Volante en español</a>)</li><li><a href="https://ccijustice.org/services/california-rapid-response-networks/">أرقام الاستجابة السريعة للإبلاغ عن نشاط ICE</a></li><li><a href="http://www.cdss.ca.gov/Benefits-Services/More-Services/Immigration-Services/Immigration-Services-Contractors">المساعدة القانونية لقضايا الهجرة الفردية</a></li></ul>
 
 
 
@@ -249,7 +249,7 @@
 
 
 
-<p>سيساعدك <a href="https://files.covid19.ca.gov/pdf/wp/listos_covid_19_immigrant_guidance_en_daf.pdf">دليل سكان كاليفورنيا من المهاجرين (PDF)</a> في البقاء بأمان وعلى اطلاع. يمكن تحديث الدليل مع مرور الوقت.</p>
+<p>سيساعدك <a href="https://files.covid19.ca.gov/pdf/wp/listos_covid_19_immigrant_guidance_en_daf.pdf">دليل سكان كاليفورنيا من المهاجرين أثناء جائحة كوفيد-19 (PDF)</a> في البقاء بأمان وعلى اطلاع. يمكن تحديث الدليل مع مرور الوقت.</p>
 
 
 
