--- a/tl/guide-immigrant-californians/index.html
+++ b/tl/guide-immigrant-californians/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Tulong para sa mga immigrant</h1>
           
-            <p class="small-text">Huling na-update&nbsp;Enero 26, 2021 sa 11:01 AM</p>
+            <p class="small-text">Huling na-update&nbsp;Pebrero 24, 2021 sa 11:23 AM</p>
           
         </div>
       </div>
@@ -205,7 +205,7 @@
 
 
 
-<ul><li><a href="https://www.nilc.org/issues/immigration-enforcement/everyone-has-certain-basic-rights/">Alamin ang iyong mga pangunahing karapatan</a></li><li><a href="https://www.ilrc.org/step-step-family-preparedness-plan">Gumawa ng plano para sa paghahanda ng pamilya</a></li><li>Alamin ang iyong mga karapatan sa trabaho (available sa <a href="https://legalaidatwork.org/factsheet/workplace-raids-workers-rights/">English</a> at <a href="https://legalaidatwork.org/factsheet/workplace-raids-workers-rights/?lang=es">Español</a>)</li><li><a href="https://ccijustice.org/services/california-rapid-response-networks/">Mga numero para sa mabilisang pagtugon para sa pag-uulat ng aktibidad sa ICE</a></li><li><a href="http://www.cdss.ca.gov/Benefits-Services/More-Services/Immigration-Services/Immigration-Services-Contractors">Legal na tulong para sa mga indibidwal na kaso sa immigration</a></li></ul>
+<ul><li><a href="https://www.nilc.org/issues/immigration-enforcement/everyone-has-certain-basic-rights/">Alamin ang iyong mga pangunahing karapatan</a></li><li><a href="https://www.ilrc.org/step-step-family-preparedness-plan">Gumawa ng plano para sa paghahanda ng pamilya</a></li><li>Alamin ang iyong mga karapatan sa trabaho (na available bilang isang <a href="https://legalaidatwork.org/factsheet/workplace-raids-workers-rights/">flyer na nasa English</a> at  <a href="https://legalaidatwork.org/factsheet/workplace-raids-workers-rights/?lang=es">Volante en español</a>)</li><li><a href="https://ccijustice.org/services/california-rapid-response-networks/">Mga numero para sa mabilisang pagtugon para sa pag-uulat ng aktibidad sa ICE</a></li><li><a href="http://www.cdss.ca.gov/Benefits-Services/More-Services/Immigration-Services/Immigration-Services-Contractors">Legal na tulong para sa mga indibidwal na kaso sa immigration</a></li></ul>
 
 
 
@@ -249,7 +249,7 @@
 
 
 
-<p>Makakatulong sa iyo ang <a href="https://files.covid19.ca.gov/pdf/wp/listos_covid_19_immigrant_guidance_en_daf.pdf">Gabay para sa Mga Immigrant na Californian (PDF)</a> na manatiling ligtas at updated. Puwedeng i-update ang gabay na ito sa paglipas ng panahon.</p>
+<p>Makakatulong sa iyo ang <a href="https://files.covid19.ca.gov/pdf/wp/listos_covid_19_immigrant_guidance_en_daf.pdf">Gabay sa COVID-19 para sa Mga Immigrant na Californian (PDF)</a> na manatiling ligtas at updated. Puwedeng i-update ang gabay na ito sa paglipas ng panahon.</p>
 
 
 
