--- a/vi/guide-immigrant-californians/index.html
+++ b/vi/guide-immigrant-californians/index.html
@@ -150,7 +150,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Hỗ trợ người nhập cư</h1>
           
-            <p class="small-text">Cập nhật mới nhất&nbsp;26 tháng 1, 2021 lúc 11:01</p>
+            <p class="small-text">Cập nhật mới nhất&nbsp;24 tháng 2, 2021 lúc 11:23</p>
           
         </div>
       </div>
@@ -207,7 +207,7 @@
 
 
 
-<ul><li><a href="https://www.nilc.org/issues/immigration-enforcement/everyone-has-certain-basic-rights/">Biết về quyền cơ bản của quý vị</a></li><li><a href="https://www.ilrc.org/step-step-family-preparedness-plan">Lập kế hoạch chuẩn bị sẵn sàng cho gia đình</a></li><li>Biết về quyền của quý vị tại nơi làm việc (có bản <a href="https://legalaidatwork.org/factsheet/workplace-raids-workers-rights/">Tiếng Anh</a> và <a href="https://legalaidatwork.org/factsheet/workplace-raids-workers-rights/?lang=es">Tiếng Tây Ban Nha</a>)</li><li><a href="https://ccijustice.org/services/california-rapid-response-networks/">Số điện thoại phản hồi nhanh để báo cáo hoạt động của Cơ Quan Thực Thi Di Trú và Hải Quan (Immigration and Customs Enforcement, ICE) Hoa Kỳ</a></li><li><a href="http://www.cdss.ca.gov/Benefits-Services/More-Services/Immigration-Services/Immigration-Services-Contractors">Trợ giúp pháp lý cho các trường hợp nhập cư cá nhân</a></li></ul>
+<ul><li><a href="https://www.nilc.org/issues/immigration-enforcement/everyone-has-certain-basic-rights/">Biết về quyền cơ bản của quý vị</a></li><li><a href="https://www.ilrc.org/step-step-family-preparedness-plan">Lập kế hoạch chuẩn bị sẵn sàng cho gia đình</a></li><li>Hiểu rõ quyền của quý vị tại nơi làm việc (có <a href="https://legalaidatwork.org/factsheet/workplace-raids-workers-rights/">tờ rơi bằng Tiếng Anh</a> và <a href="https://legalaidatwork.org/factsheet/workplace-raids-workers-rights/?lang=es">Volante en español</a>)</li><li><a href="https://ccijustice.org/services/california-rapid-response-networks/">Số điện thoại phản hồi nhanh để báo cáo hoạt động của Cơ Quan Thực Thi Di Trú và Hải Quan (Immigration and Customs Enforcement, ICE) Hoa Kỳ</a></li><li><a href="http://www.cdss.ca.gov/Benefits-Services/More-Services/Immigration-Services/Immigration-Services-Contractors">Trợ giúp pháp lý cho các trường hợp nhập cư cá nhân</a></li></ul>
 
 
 
