--- a/zh-hans/guide-immigrant-californians/index.html
+++ b/zh-hans/guide-immigrant-californians/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>为移民提供的援助</h1>
           
-            <p class="small-text">最后更新时间&nbsp;2021年1月26日, 上午11:01</p>
+            <p class="small-text">最后更新时间&nbsp;2021年2月24日, 上午11:23</p>
           
         </div>
       </div>
@@ -205,7 +205,7 @@
 
 
 
-<ul><li><a href="https://www.nilc.org/issues/immigration-enforcement/everyone-has-certain-basic-rights/">了解您的基本权利</a></li><li><a href="https://www.ilrc.org/step-step-family-preparedness-plan">制定家庭防备计划</a></li><li>了解您在工作中的权利（提供<a href="https://legalaidatwork.org/factsheet/workplace-raids-workers-rights/">英文</a>和<a href="https://legalaidatwork.org/factsheet/workplace-raids-workers-rights/?lang=es">西班牙文</a>版本）</li><li><a href="https://ccijustice.org/services/california-rapid-response-networks/">呈报美国移民及海关执法局 (Immigration and Customs Enforcement, ICE) 行动的快速响应号码</a></li><li><a href="http://www.cdss.ca.gov/Benefits-Services/More-Services/Immigration-Services/Immigration-Services-Contractors">为个人移民案例提供的法律援助</a></li></ul>
+<ul><li><a href="https://www.nilc.org/issues/immigration-enforcement/everyone-has-certain-basic-rights/">了解您的基本权利</a></li><li><a href="https://www.ilrc.org/step-step-family-preparedness-plan">制定家庭防备计划</a></li><li>了解您在工作中的权利（提供<a href="https://legalaidatwork.org/factsheet/workplace-raids-workers-rights/">英文宣传单张</a>和<a href="https://legalaidatwork.org/factsheet/workplace-raids-workers-rights/?lang=es">西班牙文宣传单张</a>）</li><li><a href="https://ccijustice.org/services/california-rapid-response-networks/">呈报美国移民及海关执法局 (Immigration and Customs Enforcement, ICE) 行动的快速响应号码</a></li><li><a href="http://www.cdss.ca.gov/Benefits-Services/More-Services/Immigration-Services/Immigration-Services-Contractors">为个人移民案例提供的法律援助</a></li></ul>
 
 
 
@@ -249,7 +249,7 @@
 
 
 
-<p><a href="https://files.covid19.ca.gov/pdf/wp/listos_covid_19_immigrant_guidance_en_daf.pdf">加州移民指引 (PDF) </a>将帮助您保持安全并保持了解最新消息。该指引可能会在之后进行更新。</p>
+<p><a href="https://files.covid19.ca.gov/pdf/wp/listos_covid_19_immigrant_guidance_en_daf.pdf">为加州移民提供的COVID-19指引 (PDF)</a> 将帮助您保持安全并了解最新消息。该指引可能会在之后进行更新。</p>
 
 
 
