--- a/es/guide-immigrant-californians/index.html
+++ b/es/guide-immigrant-californians/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>Ayuda para inmigrantes</h1>
           
-            <p class="small-text">Última actualización&nbsp;26 de enero de 2021 a las 11:01 a. m.</p>
+            <p class="small-text">Última actualización&nbsp;24 de febrero de 2021 a las 11:23 a. m.</p>
           
         </div>
       </div>
@@ -205,7 +205,7 @@
 
 
 
-<ul><li><a href="https://www.nilc.org/issues/immigration-enforcement/everyone-has-certain-basic-rights/">Conozca sus derechos básicos.</a></li><li><a href="https://www.ilrc.org/step-step-family-preparedness-plan">Elabore un plan de preparación familiar.</a></li><li>Conozca sus derechos en el trabajo (disponible en <a href="https://legalaidatwork.org/factsheet/workplace-raids-workers-rights/">inglés</a> y en <a href="https://legalaidatwork.org/factsheet/workplace-raids-workers-rights/?lang=es">español</a>).</li><li><a href="https://ccijustice.org/services/california-rapid-response-networks/">Números de respuesta rápida para reportar actividad de Inmigración y Control de Aduanas (Immigration and Custom Enforcement, ICE).</a></li><li><a href="http://www.cdss.ca.gov/Benefits-Services/More-Services/Immigration-Services/Immigration-Services-Contractors">Ayuda legal para casos individuales de inmigración.</a></li></ul>
+<ul><li><a href="https://www.nilc.org/issues/immigration-enforcement/everyone-has-certain-basic-rights/">Conozca sus derechos básicos.</a></li><li><a href="https://www.ilrc.org/step-step-family-preparedness-plan">Elabore un plan de preparación familiar.</a></li><li>Conozca sus derechos en el trabajo (disponible como un <a href="https://legalaidatwork.org/factsheet/workplace-raids-workers-rights/">volante en inglés</a> y un <a href="https://legalaidatwork.org/factsheet/workplace-raids-workers-rights/?lang=es">volante en español</a>).</li><li><a href="https://ccijustice.org/services/california-rapid-response-networks/">Números de respuesta rápida para reportar actividad de Inmigración y Control de Aduanas (Immigration and Custom Enforcement, ICE).</a></li><li><a href="http://www.cdss.ca.gov/Benefits-Services/More-Services/Immigration-Services/Immigration-Services-Contractors">Ayuda legal para casos individuales de inmigración.</a></li></ul>
 
 
 
@@ -249,7 +249,7 @@
 
 
 
-<p>La <a href="https://files.covid19.ca.gov/pdf/wp/listos_covid_19_immigrant_guidance_en_daf.pdf">Guía para los californianos inmigrantes</a> lo mantendrá informado y a salvo. La guía puede ser actualizada más adelante.</p>
+<p>La <a href="https://files.covid19.ca.gov/pdf/wp/listos_covid_19_immigrant_guidance_en_daf.pdf">Guía sobre la COVID-19 para los californianos inmigrantes</a> lo mantendrá informado y a salvo. La guía puede ser actualizada más adelante.</p>
 
 
 
