--- a/ko/guide-immigrant-californians/index.html
+++ b/ko/guide-immigrant-californians/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>이민자를 위한 지원</h1>
           
-            <p class="small-text">최종 갱신 일자&nbsp;2021년 1월 26일 오전 11:01</p>
+            <p class="small-text">최종 갱신 일자&nbsp;2021년 2월 24일 오전 11:23</p>
           
         </div>
       </div>
@@ -173,7 +173,7 @@
 
 
 
-<p><strong><strong>두려움으로 인해 필요한 지원이나 치료를 받지 못하는 경우는 없어야 합니다.</strong></strong> 의료 서비스 회피에 따른 결과로 상황이 심각해 질 수 있습니다.  이를 통해 자신과 가족, 해당 지역 사회의 건강을 지킬 수 있습니다.</p>
+<p><strong><strong>두려움으로 인해 필요한 지원이나 치료를 받지 못하는 경우는 없어야 합니다.</strong></strong> 의료 서비스 회피에 따른 결과로 상황이 심각해 질 수 있습니다. 이를 통해 자신과 가족, 해당 지역 사회의 건강을 지킬 수 있습니다.</p>
 
 
 
@@ -205,7 +205,7 @@
 
 
 
-<ul><li><a href="https://www.nilc.org/issues/immigration-enforcement/everyone-has-certain-basic-rights/">자신의 기본 권리를 확인하십시오</a></li><li><a href="https://www.ilrc.org/step-step-family-preparedness-plan">가족 대비 계획을 마련하십시오</a></li><li>직장에서의 권리를 확인하십시오 (<a href="https://legalaidatwork.org/factsheet/workplace-raids-workers-rights/">영어</a> 및 <a href="https://legalaidatwork.org/factsheet/workplace-raids-workers-rights/?lang=es">스페인어</a>로 제공)</li><li><a href="https://ccijustice.org/services/california-rapid-response-networks/">ICE 활동 보고를 위한 신속 대응 전화 번호</a></li><li><a href="http://www.cdss.ca.gov/Benefits-Services/More-Services/Immigration-Services/Immigration-Services-Contractors">개별 이민 사례를 위한 법률 지원</a></li></ul>
+<ul><li><a href="https://www.nilc.org/issues/immigration-enforcement/everyone-has-certain-basic-rights/">자신의 기본 권리를 확인하십시오</a></li><li><a href="https://www.ilrc.org/step-step-family-preparedness-plan">가족 대비 계획을 마련하십시오</a></li><li>직장에서의 권리를 확인하십시오 (<a href="https://legalaidatwork.org/factsheet/workplace-raids-workers-rights/">영어 전단지</a> 및 <a href="https://legalaidatwork.org/factsheet/workplace-raids-workers-rights/?lang=es">Volante en español</a>로 제공)</li><li><a href="https://ccijustice.org/services/california-rapid-response-networks/">ICE 활동 신고를 위한 신속 대응 전화 번호</a></li><li><a href="http://www.cdss.ca.gov/Benefits-Services/More-Services/Immigration-Services/Immigration-Services-Contractors">개별 이민 사례를 위한 법률 지원</a></li></ul>
 
 
 
@@ -249,7 +249,7 @@
 
 
 
-<p><a href="https://files.covid19.ca.gov/pdf/wp/listos_covid_19_immigrant_guidance_en_daf.pdf">캘리포니아주 이민자를 위한 지침서(PDF)</a>는 안전한 생활과 꾸준한 정보 확인을 도와드릴 것입니다. 안내 내용은 앞으로 계속 업데이트될 수 있습니다.</p>
+<p><a href="https://files.covid19.ca.gov/pdf/wp/listos_covid_19_immigrant_guidance_en_daf.pdf">캘리포니아주 이민자를 위한 COVID-19 지침서(PDF)</a>는 안전한 생활과 꾸준한 정보 확인을 도와드릴 것입니다. 안내 내용은 앞으로 계속 업데이트될 수 있습니다.</p>
 
 
 
