--- a/zh-hant/guide-immigrant-californians/index.html
+++ b/zh-hant/guide-immigrant-californians/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>為移民提供的援助</h1>
           
-            <p class="small-text">最近更新&nbsp;2021年1月26日, 上午11:01</p>
+            <p class="small-text">最近更新&nbsp;2021年2月24日, 上午11:23</p>
           
         </div>
       </div>
@@ -205,7 +205,7 @@
 
 
 
-<ul><li><a href="https://www.nilc.org/issues/immigration-enforcement/everyone-has-certain-basic-rights/">了解您的基本權利</a></li><li><a href="https://www.ilrc.org/step-step-family-preparedness-plan">制定家庭防備計劃</a></li><li>了解您在工作中的權利（提供<a href="https://legalaidatwork.org/factsheet/workplace-raids-workers-rights/">英文</a>和<a href="https://legalaidatwork.org/factsheet/workplace-raids-workers-rights/?lang=es">西班牙文</a>版本）</li><li><a href="https://ccijustice.org/services/california-rapid-response-networks/">呈報移民及海關執法局 (Immigration and Customs Enforcement, ICE) 行動的快速響應號碼</a></li><li><a href="http://www.cdss.ca.gov/Benefits-Services/More-Services/Immigration-Services/Immigration-Services-Contractors">為個人移民案例提供的法律援助</a></li></ul>
+<ul><li><a href="https://www.nilc.org/issues/immigration-enforcement/everyone-has-certain-basic-rights/">了解您的基本權利</a></li><li><a href="https://www.ilrc.org/step-step-family-preparedness-plan">制定家庭防備計劃</a></li><li>了解您在工作中的權利（提供<a href="https://legalaidatwork.org/factsheet/workplace-raids-workers-rights/">英文宣傳單張</a>和<a href="https://legalaidatwork.org/factsheet/workplace-raids-workers-rights/?lang=es">西班牙文宣傳單張</a>）</li><li><a href="https://ccijustice.org/services/california-rapid-response-networks/">呈報移民及海關執法局 (Immigration and Customs Enforcement, ICE) 行動的快速響應號碼</a></li><li><a href="http://www.cdss.ca.gov/Benefits-Services/More-Services/Immigration-Services/Immigration-Services-Contractors">為個人移民案例提供的法律援助</a></li></ul>
 
 
 
@@ -249,7 +249,7 @@
 
 
 
-<p><a href="https://files.covid19.ca.gov/pdf/wp/listos_covid_19_immigrant_guidance_en_daf.pdf">加州移民指南 (Guide for Immigrant Californians)（PDF文檔）</a>將幫助您保持安全和知情。該指南可能會在之後進行更新。</p>
+<p><a href="https://files.covid19.ca.gov/pdf/wp/listos_covid_19_immigrant_guidance_en_daf.pdf">為加州移民提供的COVID-19指南 (PDF)</a> 將幫助您保持安全和了解最新資訊。該指南可能會在之後進行更新。</p>
 
 
 
