--- a/ko/holidays/index.html
+++ b/ko/holidays/index.html
@@ -148,7 +148,7 @@
         <div class="col-lg-10 mx-auto">
           <h1>휴일과 COVID-19</h1>
           
-            <p class="small-text">최종 갱신 일자&nbsp;2021년 2월 22일 오후 4:57</p>
+            <p class="small-text">최종 갱신 일자&nbsp;2021년 2월 24일 오후 2:57</p>
           
         </div>
       </div>
@@ -217,7 +217,7 @@
 
 
 
-<p>세부 사항 및 요건은 CDPH의 <a title="여행 주의보 확인" href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Travel-Advisory.aspx">여행 주의보</a> 및 <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/COVID-19-Quarantine.aspx">COVID-19 격리 지침</a>에서 확인하십시오.</p>
+<p>세부 사항 및 요건은 <a title="여행 주의보 확인" href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/Travel-Advisory.aspx">CDPH의 여행 주의보</a> 및 <a href="https://www.cdph.ca.gov/Programs/CID/DCDC/Pages/COVID-19/COVID-19-Quarantine.aspx">COVID-19 격리 지침</a>에서 확인하십시오.</p>
 
 
 
